feat: add custom register endpoint /register
